add the new method for mbtiles

--- a/app/views/maps/export.html.erb
+++ b/app/views/maps/export.html.erb
@@ -1,5 +1,8 @@
 <h2>Map</h2>
 <ul>
+   <li>
+    MbTiles: <%= link_to  "Download rectified MbTiles ", export_map_url(:id => @map, :format => :mbtiles) %>
+  </li>
   <li>
     GeoTiff: <%= link_to  "Download rectified GeoTiff", export_map_url(:id => @map, :format => :tif) %>
   </li>
